tests/ui/unboxed-closures/unboxed-closure-sugar-region.stderr
error[E0107]: trait takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/unboxed-closure-sugar-region.rs:30:51
   |
LL | fn test2(x: &dyn Foo<(isize,),Output=()>, y: &dyn Foo(isize)) {
   |                                                   ^^^ expected 1 lifetime argument
   |
note: trait defined here, with 1 lifetime parameter: `'a`
  --> $DIR/unboxed-closure-sugar-region.rs:10:7
   |
LL | trait Foo<'a,T> {
   |       ^^^ --

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
